# c-gtk

./: .gitignore  CMakeLists.txt  COPYRIGHT  README  c-gtk  cmake_install.cmake  install_linux.sh  main.c  makefile  out
api/: libs.h
api/helloWorld/: helloWorld.c  helloWorld.h
api/login/: login.c
app/: App.c  App.h
app/components/Button/: Button.c  Button.h  style.css
app/components/TabMenu/: TabMenu.c  TabMenu.h
app/pages/: .MainPage.c.swp  Defaults.h  LoginPage.c  MainPage.c  MainPage.c.save  MainPage.h  PageUtils.h
app/pages/styles/: main.css
lib/: Api.h  App.h  Db.h
src/: Api.c  App.c  Db.c  LoginPage.c  MainPage.c  main.c  styles.css
utils/: c-gtk.desktop
